--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>脑瓜的网页</title>
+</head>
+<body>
+<p>此时此景</p>
+<p>俺想吟诗一首</p>
+<p>君问归期未有期</p>
+<p>京山夜语张秋实</p>
+<p>何当共剪西窗烛</p>
+<p>却话巴山</p>
+<p>夜雨时</p>
+</body>
+</html>
