--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;"><em><strong><span style="color:#ff0000">君问归期未有期</span></strong></em></p>
 <p style="text-align: center;"><em><strong><span style="color:#ff0000">京山夜语张秋实</span></strong></em></p>
-<p style="text-align: center;"><em><strong><span style="color:#ff0000">何当共剪西窗烛</span></strong></em></p>
-<p style="text-align: center;"><em><strong><span style="color:#ff0000">却话巴山夜雨时</span></strong></em></p>
+<p style="text-align: center;"><em><strong><span style="color:#ff0000">何当共推乡镇网</span></strong></em></p>
+<p style="text-align: center;"><em><strong><span style="color:#ff0000">却话中公食堂饭</span></strong></em></p>
 <p>hui想念大家滴</p>
 </body>
 </html>
