--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>脑瓜的网页</title>
 </head>
 <body>
-<img src="微信图片_20190604172850.png">
+<p style="text-align: center;">><img src="微信图片_20190604172850.png" /></p>
 <p style="text-align: center;"><span style="background-color:#ffff00">此时此景</span></p>
 <p style="text-align: center;"><span style="background-color:#ffff00">俺想吟诗一首</span></p>
 <p style="text-align: center;">&nbsp;</p>
