--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <title>脑瓜的网页</title>
 </head>
 <body>
-<p style="text-align: center;">><img src="微信图片_20190604172850.png" /></p>
-<p style="text-align: center;"><span style="background-color:#ffff00">此时此景</span></p>
-<p style="text-align: center;"><span style="background-color:#ffff00">俺想吟诗一首</span></p>
-<p style="text-align: center;">&nbsp;</p>
-<p style="text-align: center;"><em><strong><span style="color:#ff0000">君问归期未有期</span></strong></em></p>
-<p style="text-align: center;"><em><strong><span style="color:#ff0000">京山夜语张秋实</span></strong></em></p>
-<p style="text-align: center;"><em><strong><span style="color:#ff0000">何当共推乡镇网</span></strong></em></p>
-<p style="text-align: center;"><em><strong><span style="color:#ff0000">却话中公食堂饭</span></strong></em></p>
-<p>hui想念大家滴</p>
+<p style="text-align: center;"><img src="微信图片_20190604172850.png" /></p>
+<p style="text-align: center;"><span style="background-color:#ffff00">吟诗一首</span></p>
+<p style="text-align: center;">石州慢丶小绿留念</p>
+<p style="text-align: center;">凭高望远，万里长空，云无留迹。燕山蝉鸣仍未起，春日杨柳已先折。</p>
+<p style="text-align: center;">空梦一场，世间多少别离，亭外万语勿多言。同居千万里，待别来无恙。</p>
+<p>hui想念大家滴，爱你萌</p>
+<p style="text-align: center;"><img src="微信图片_20190604172850.png" /></p>
 </body>
 </html>
