--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <p style="text-align: center;">凭高望远，万里长空，云无留迹。燕山蝉鸣仍未起，春日杨柳已先折。</p>
 <p style="text-align: center;">空梦一场，世间多少别离，亭外万语勿多言。同居千万里，待别来无恙。</p>
 <p>hui想念大家滴，爱你萌</p>
-<p style="text-align: center;"><img src="0.png" /></p>
-<p style="text-align: center;"><img src="1.png" /></p>
-<p style="text-align: center;"><img src="3.png" /></p>
-<p style="text-align: center;"><img src="5.png" /></p>
+<p style="text-align: center;"><img src="0.jpg" /></p>
+<p style="text-align: center;"><img src="1.jpg" /></p>
+<p style="text-align: center;"><img src="3.jpg" /></p>
+<p style="text-align: center;"><img src="5.jpg" /></p>
 </body>
 </html>
